src/test/deca/syntax/invalid/notYetImplemented/test_parser_wrong_instanceof_use.deca
// Description:
//    Minimalistic program to test the use of instanceof.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car{
    int x = 42;
    boolean myMethod(int param){
        if (x instanceof){
            return 4;
        }
    }
}